PROJECT(EpgSloveniaPlugin)

INCLUDE(${QT_USE_FILE})
INCLUDE_DIRECTORIES(
	${QT_INCLUDE_DIR}
	../../src
)

SET(SOURCES_CPP
	EpgSloveniaPluginCreator.cpp
	EpgSloveniaPlugin.cpp
)

SET(SOURCES_H
	EpgSloveniaPluginCreator.h
)

QT4_WRAP_CPP(SOURCES_H_MOC ${SOURCES_H})

ADD_DEFINITIONS(${QT_DEFINITIONS})
ADD_DEFINITIONS(-DQT_PLUGIN)
ADD_DEFINITIONS(-DQT_NO_DEBUG)
ADD_DEFINITIONS(-DQT_SHARED)

ADD_LIBRARY(EpgSloveniaPlugin SHARED ${SOURCES_CPP} ${SOURCES_H_MOC})
ADD_DEPENDENCIES(EpgSloveniaPlugin vlmc)

TARGET_LINK_LIBRARIES(EpgSloveniaPlugin ${QT_LIBRARIES})

IF(MINGW)
INSTALL(TARGETS EpgSloveniaPlugin DESTINATION ${CMAKE_INSTALL_PREFIX}/${TANO_INSTALL_PLUGIN_DIR})
ELSE(MINGW)
INSTALL(TARGETS EpgSloveniaPlugin LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX}/${TANO_INSTALL_PLUGIN_DIR})
ENDIF(MINGW)
